--- a/FAQ.html
+++ b/FAQ.html
@@ -379,6 +379,36 @@ for dependencies, even when an external dependency exists and could
 satisfy the version requirements, for example in order to make
 sure your project builds when fallbacks are used, you can use
 <code>--wrap-mode=forcefallback</code> since 0.46.0.</p>
+<h2 id="why-is-meson-implemented-in-python-rather-than-programming-language-x">Why is Meson implemented in Python rather than [programming language X]?</h2>
+<p>Because build systems are special in ways normal applications aren't.</p>
+<p>Perhaps the biggest limitation is that because Meson is used to build
+software at the very lowest levels of the OS, it is part of the core
+bootstrap for new systems. Whenever support for a new CPU architecture
+is added, Meson must run on the system before software using it can be
+compiled natively. This requirement adds two hard limitations.</p>
+<p>The first one is that Meson must have the minimal amount of
+dependencies, because they must all be built during the bootstrap to
+get Meson to work.</p>
+<p>The second is that Meson must support all CPU architectures, both
+existing and future ones. As an example many new programming languages
+have only an LLVM based compiler available. LLVM has limited CPU
+support compared to, say, GCC, and thus bootstrapping Meson on such
+platforms would first require adding new processor support to
+LLVM. This is in most cases unfeasible.</p>
+<p>A further limitation is that we want developers on as many platforms
+as possible to submit to Meson development using the default tools
+provided by their operating system. In practice what this means is
+that Windows developers should be able to contribute using nothing but
+Visual Studio.</p>
+<p>At the time of writing (April 2018) there are only three languages
+that could fullfill these requirements:</p>
+<ul>
+<li>C</li>
+<li>C++</li>
+<li>Python</li>
+</ul>
+<p>Out of these we have chosen Python because it is the best fit for our
+needs.</p>
 
 </div>
 
