Bleep. Bloop. I am a bot.

--- a/Users.html
+++ b/Users.html
@@ -185,6 +185,8 @@ listed in the <a href="https://github.com/topics/meson"><code>meson</code> GitHu
 <li>
 <a href="https://github.com/ebassi/emeus">Emeus</a>, Constraint based layout manager for GTK+</li>
 <li>
+<a href="https://wiki.gnome.org/Apps/Fractal/">Fractal</a>, a Matrix messaging client for GNOME</li>
+<li>
 <a href="https://github.com/frida/frida-core">Frida</a>, a dynamic binary instrumentation toolkit</li>
 <li>
 <a href="https://github.com/hughsie/fwupd">fwupd</a>, a simple daemon to allow session software to update firmware</li>
@@ -193,19 +195,19 @@ listed in the <a href="https://github.com/topics/meson"><code>meson</code> GitHu
 <li>
 <a href="https://gitlab.gnome.org/GNOME/glib">GLib</a>, cross-platform C library used by GTK+ and GStreamer (not the default yet)</li>
 <li>
-<a href="https://gitlab.gnome.org/GNOME/gnome-boxes">Gnome Boxes</a>, a Gnome hypervisor</li>
+<a href="https://gitlab.gnome.org/GNOME/gnome-boxes">GNOME Boxes</a>, a GNOME hypervisor</li>
 <li>
-<a href="https://gitlab.gnome.org/GNOME/gnome-builder">Gnome Builder</a>, an IDE for the Gnome platform</li>
+<a href="https://gitlab.gnome.org/GNOME/gnome-builder">GNOME Builder</a>, an IDE for the GNOME platform</li>
 <li>
-<a href="https://github.com/gnome-mpv/gnome-mpv">Gnome MPV</a>, Gnome frontend to the mpv video player</li>
+<a href="https://github.com/gnome-mpv/gnome-mpv">GNOME MPV</a>, GNOME frontend to the mpv video player</li>
 <li>
-<a href="https://gitlab.gnome.org/GNOME/recipes">Gnome Recipes</a>, application for cooking recipes</li>
+<a href="https://gitlab.gnome.org/GNOME/recipes">GNOME Recipes</a>, application for cooking recipes</li>
 <li>
-<a href="https://gitlab.gnome.org/GNOME/gnome-software">Gnome Software</a>, an app store for Gnome</li>
+<a href="https://gitlab.gnome.org/GNOME/gnome-software">GNOME Software</a>, an app store for GNOME</li>
 <li>
-<a href="https://github.com/vinszent/gnome-twitch">Gnome Twitch</a>, an app for viewing Twitch streams on Gnome desktop</li>
+<a href="https://github.com/vinszent/gnome-twitch">GNOME Twitch</a>, an app for viewing Twitch streams on GNOME desktop</li>
 <li>
-<a href="https://gitlab.gnome.org/GNOME/gnome-usage">Gnome Usage</a>, a Gnome application for visualizing system resources</li>
+<a href="https://gitlab.gnome.org/GNOME/gnome-usage">GNOME Usage</a>, a GNOME application for visualizing system resources</li>
 <li>
 <a href="https://ebassi.github.io/graphene/">Graphene</a>, a thin type library for graphics</li>
 <li>
@@ -256,7 +258,7 @@ format files</li>
 <li>
 <a href="https://github.com/albfan/miraclecast">MiracleCast</a>, connect external monitors to your system via Wifi-Display specification aka Miracast</li>
 <li>
-<a href="https://gitlab.gnome.org/GNOME/nautilus">Nautilus</a>, the Gnome file manager</li>
+<a href="https://gitlab.gnome.org/GNOME/nautilus">Nautilus</a>, the GNOME file manager</li>
 <li>
 <a href="https://github.com/linuxmint/nemo">Nemo</a>, the file manager for the Cinnamon desktop environment</li>
 <li>
