Bleep. Bloop. I am a bot.

--- a/Build-options.html
+++ b/Build-options.html
@@ -178,7 +178,7 @@ option('some_feature', type : 'feature', value : 'enabled')
 </code></pre>
 <h2 id="build-option-types">Build option types</h2>
 <p>All types allow a <code>description</code> value to be set describing the option,
-if no option is set then the name of the option will be used instead.</p>
+if no description is set then the name of the option will be used instead.</p>
 <h3 id="strings">Strings</h3>
 <p>The string type is a free form string. If the default value is not set
 then an empty string will be used as the default.</p>
