Bleep. Bloop. I am a bot.

--- a/Reference-manual.html
+++ b/Reference-manual.html
@@ -1679,7 +1679,7 @@ provided by the standard library or a library passed in with the
 <code>dependencies</code> keyword argument.</p>
 </li>
 <li>
-<p><code>check_header</code> returns true if the specified header is <em>usable</em> with
+<p><code>check_header</code> <em>(added 0.47.0)</em> returns true if the specified header is <em>usable</em> with
 the specified prefix, dependencies, and arguments.
 You can specify external dependencies to use with <code>dependencies</code>
 keyword argument and extra code to put above the header test with
