--- a/Reference-tables.html
+++ b/Reference-tables.html
@@ -339,6 +339,10 @@ set in the cross file.</p>
 <td> 64 bit RISC-V Open ISA</td>
 </tr>
 <tr>
+<td> sparc</td>
+<td> 32 bit SPARC</td>
+</tr>
+<tr>
 <td> sparc64</td>
 <td> SPARC v9 processor</td>
 </tr>
