--- a/IDE-integration.html
+++ b/IDE-integration.html
@@ -188,6 +188,14 @@ $('body').removeClass('no-script');
 <pre><code>meson introspect --tests
 </code></pre>
 <p>This provides you with all the information needed to run the test: what command to execute, command line arguments and environment variable settings.</p>
+<h1 id="existing-integrations">Existing integrations</h1>
+<ul>
+<li><a href="https://wiki.gnome.org/Apps/Builder">Gnome Builder</a></li>
+<li>
+<a href="https://www.eclipse.org/cdt/">Eclipse CDT</a> (experimental)</li>
+<li>
+<a href="https://github.com/prozum/meson-cmake-wrapper">Meson Cmake Wrapper</a> (for cmake IDEs)</li>
+</ul>
 
 </div>
 
