Bleep. Bloop. I am a bot.

--- a/Builtin-options.html
+++ b/Builtin-options.html
@@ -348,6 +348,12 @@ platforms or with all compilers:</p>
 <td> Enable coverage tracking</td>
 </tr>
 <tr>
+<td> b_vscrt</td>
+<td> from_buildtype</td>
+<td> none, md, mdd, mt, mtd, from_buildtype</td>
+<td> VS runtime library to use (since 0.48.0)</td>
+</tr>
+<tr>
 <td> b_lundef</td>
 <td> true</td>
 <td> true, false</td>
