--- a/Reference-tables.html
+++ b/Reference-tables.html
@@ -346,6 +346,10 @@ set in the cross file.</p>
 <td> sparc64</td>
 <td> SPARC v9 processor</td>
 </tr>
+<tr>
+<td> s390x</td>
+<td> IBM zSystem s390x</td>
+</tr>
 </tbody>
 </table>
 <p>Any cpu family not listed in the above list is not guaranteed to
