--- a/Quick-guide.html
+++ b/Quick-guide.html
@@ -226,9 +226,11 @@ on used flags.</p>
 <p>This is very similar to other build systems. The only difference is
 that the <code>DESTDIR</code> variable is passed as an environment variable
 rather than as an argument to <code>ninja install</code>.</p>
-<p>As distro builds happen always from scratch, we recommend you to
-enable <a href="Unity-builds.html">unity builds</a> whenever possible on your
-packages because they are faster and produce better code.</p>
+<p>As distro builds happen always from scratch, you might consider
+enabling <a href="Unity-builds.html">unity builds</a> on your packages because they
+are faster and produce better code. However there are many projects
+that do not build with unity builds enabled so the decision to use
+unity builds must be done by the packager on a case by case basis.</p>
 
 </div>
 
